# Anytype-Bibliography-Manager

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROMPT.txt  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md
src/ai/: summarizer.ts
src/anytype/: client.ts
src/anytype_bib_manager/: __init__.py  __main__.py  config.py  models.py  pipeline.py
src/anytype_bib_manager/services/: __init__.py  anytype.py  dedup.py  metadata.py
src/cli/: index.ts
src/core/: bibliography-manager.ts  bibtex-formatter.ts  config-manager.ts  doi-resolver.ts  duplicate-detector.ts
src/types/: anytype.ts  crossref.ts
src/utils/: text-utils.ts
test/: README.md  integration.test.ts  run-tests.ts  simple-integration.test.ts
tests/: conftest.py  test_metadata.py  test_models.py  test_pipeline.py
